# Coyin_V2

./: .gitignore  README.md  pyproject.toml  run.py
assets/config/: model_contracts.json  shell_schema.json  task_contracts.json
assets/config/themes/: dark.json  light.json
native/: CMakeLists.txt
native/include/: chrome_effects_native.h
native/shaders/: shimmer_rail.frag  signal_accent.frag  surface.vert
native/src/: chrome_effects_native.cpp  coyin_native.cpp
plugins/builtin/bibtex_normalizer/: manifest.json  plugin.py
plugins/builtin/figure_extractor/: manifest.json  plugin.py
plugins/builtin/glossary_guard/: manifest.json  plugin.py
plugins/builtin/metadata_enricher/: manifest.json  plugin.py
plugins/builtin/writer_plus/: manifest.json  plugin.py
src/coyin/: app.py  bootstrap.py  config.py  main.py  paths.py
src/coyin/core/: common.py
src/coyin/core/analysis/: models.py  service.py
src/coyin/core/annotations/: store.py
src/coyin/core/commands/: analysis_commands.py  annotation_commands.py  bus.py  document_commands.py  library_commands.py  plugin_commands.py  writer_commands.py
src/coyin/core/documents/: adapters.py  models.py  repository.py
src/coyin/core/exporters/: base.py
src/coyin/core/indexing/: __init__.py  contracts.py  workspace_index.py
src/coyin/core/plugins/: api.py  manager.py
src/coyin/core/render/: coordinator.py
src/coyin/core/resources/: catalog.py
src/coyin/core/search/: service.py  sources.py
src/coyin/core/tasks/: __init__.py  scheduler.py  state.py
src/coyin/core/workspace/: service.py  state.py  window_registry.py
src/coyin/native/: bridge.py
src/coyin/qt/controllers/: main_controller.py  main_controller_coordinators.py  shell_state.py  task_runner.py
src/coyin/qt/models/: record_list_model.py
src/coyin/qt/qml/: Main.qml
src/coyin/qt/qml/components/: AssistantDock.qml  AutoHideScrollBar.qml  CoyinPdfScrollableView.qml  DocumentLibraryCard.qml  InfoPill.qml  InteractionTracker.qml  InteractiveButton.qml  InteractiveChip.qml  InteractiveExpander.qml  InteractiveTextField.qml  InteractiveToggle.qml  LoadingStrip.qml  MetricTile.qml  SearchResultCard.qml  SectionCard.qml  TaskBanner.qml  TopNavTab.qml  (+1 more)
src/coyin/qt/quick/: chrome_effects.py
src/coyin/qt/widgets/: auto_scroll.py  detachable_tabs.py  iconography.py  latex_highlighter.py  latex_window.py  markdown_window.py  parallax_banner.py  pdf_view.py  quick_pdf_view.py  reader_window.py  ribbon.py  theme.py  writer_window.py
templates/latex/: basic.tex  ieee.tex
(+7 files in other folders)
